add DPD