@@ -5,6 +5,7 @@ import com.example.delivery_aggregator.dto.pages.DeliveryServiceDto;
 import com.example.delivery_aggregator.dto.pages.IndexPageDataDto;
 import com.example.delivery_aggregator.dto.pages.TariffDto;
 import com.example.delivery_aggregator.dto.pages.TariffsPageData;
+import com.example.delivery_aggregator.mappers.AggregatorMapper;
 import com.example.delivery_aggregator.mappers.CdekMapper;
 import com.example.delivery_aggregator.mappers.DpdMapper;
 import com.example.delivery_aggregator.mappers.YandexMapper;
@@ -18,22 +19,27 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
+import ru.dpd.ws.calculator._2012_03_20.ServiceCost;
 
 import java.io.IOException;
+import java.lang.reflect.Array;
 import java.security.Principal;
+import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Controller
 @Data
 @RequiredArgsConstructor
 public class TariffController {
 
+    private final AggregatorMapper aggregatorMapper;
+
     private final CdekService cdekService;
     private final CdekMapper cdekMapper;
-
-    private final YandexService yandexService;
-    private final YandexMapper yandexMapper;
 
     private final DpdService dpdService;
     private final DpdMapper dpdMapper;
@@ -43,16 +49,25 @@ public class TariffController {
         String userLogin = (principal != null) ? principal.getName() : "anonymous";
         model.addAttribute("userLogin", userLogin);
 
-        ResponseEntity<?> cdekResponseEntity = cdekService.getTariffs(indexPageDataDto);
-        //ResponseEntity<?> yandexResponseEntity = yandexService.getTariffs(indexPageDataDto);
+        ResponseEntity<CdekCalculatorResponseDto> cdekResponseEntity = cdekService.getTariffs(indexPageDataDto);
         ResponseEntity<?> dpdResponseEntity = dpdService.getTariffs(indexPageDataDto);
 
-        TariffsPageData tariffsPageData = cdekMapper.cdekCalculatorResponseToTariffsPageData((CdekCalculatorResponseDto) cdekResponseEntity.getBody(), indexPageDataDto);
+        TariffsPageData tariffsPageData = aggregatorMapper.indexPageDataDtoToTariffsPageData(indexPageDataDto);
+        DeliveryServiceDto cdekDeliveryServiceDto = new DeliveryServiceDto("CDEK", "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/CDEK_logo.svg/145px-CDEK_logo.svg.png");
+        DeliveryServiceDto dpdDeliveryServiceDto = new DeliveryServiceDto("DPD", "https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/DPD_logo_%282015%29.svg/177px-DPD_logo_%282015%29.svg.png");
 
-        tariffsPageData.setService(new DeliveryServiceDto());
-        tariffsPageData.getService().setName("CDEK");
-        tariffsPageData.getService().setLogo("https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/CDEK_logo.svg/145px-CDEK_logo.svg.png");
-        tariffsPageData.setTariffs(tariffsPageData.getTariffs().stream().filter(t-> Objects.equals(t.getName(), "Посылка дверь-дверь")).sorted(Comparator.comparing(TariffDto::getPrice)).toList());
+        List<TariffDto> cdekTariffs = cdekMapper.cdekCalculatorResponseDtoToTariffDtoList(cdekResponseEntity.getBody(), cdekDeliveryServiceDto);
+        List<TariffDto> dpdTariffs = dpdMapper.serviceCostListToTariffDtoList((List<ServiceCost>) dpdResponseEntity.getBody(), dpdDeliveryServiceDto);
+
+        tariffsPageData.setTariffs(
+                Stream.concat(
+                        cdekMapper.cdekCalculatorResponseDtoToTariffDtoList(cdekResponseEntity.getBody(), cdekDeliveryServiceDto).stream(),
+                        dpdMapper.serviceCostListToTariffDtoList((List<ServiceCost>) dpdResponseEntity.getBody(), dpdDeliveryServiceDto).stream()
+                ).collect(Collectors.toList())
+        );
+
+        //tariffsPageData.setTariffs(tariffsPageData.getTariffs().stream().filter(t-> Objects.equals(t.getName(), "Посылка дверь-дверь")).sorted(Comparator.comparing(TariffDto::getPrice)).toList());
+        tariffsPageData.setTariffs(tariffsPageData.getTariffs().stream().sorted(Comparator.comparing(TariffDto::getPrice)).toList());
 
         model.addAttribute(tariffsPageData);
         return "tariffs";
